# pypopulation

./: .coveragerc  .flake8  .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: checks.yml  publish.yml
pypopulation/: __init__.py  implementation.py
pypopulation/resources/: countries.json
tests/: test_implementation.py
tests/resources/: test_countries.py
